<resources>
    <string name="app_name">Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_day">Note Day</string>
    <string name="note_description">Note Description</string>
    <string name="query_hint">Search notes</string>
    <string name="list_view">List view</string>
    <string name="grid_view">Grid view</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="add_note">Add Note</string>
    <string name="update_note">Update Note</string>
    <string name="title">Title</string>
    <string name="start_typing">Start typing</string>
    <string name="save">SAVE</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="no_notes_create_your_first_note">No Notes Found! \nCreate your first note.</string>
    <string name="type_note_here">Type note here…</string>
    <string name="more_options">More Options</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="cancel">Cancel</string>
    <string name="label_loading">Loading…</string>
    <string name="are_you_sure_you_want_to_delete_tasks">Are you sure you want to delete Tasks?</string>
    <string name="ok">OK</string>

    <string-array name="priority_types">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

</resources>