<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_listView"
        android:icon="@drawable/ic_list"
        android:title="@string/list_view" />
    <item
        android:id="@+id/menu_gridView"
        android:icon="@drawable/ic_grid"
        android:title="@string/grid_view" />
    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_help"
        android:title="@string/help"
        android:visible="false" />
    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_all" />
    <item
        android:id="@+id/menu_setting"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        android:visible="false" />
</menu>