<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="note"
            type="org.tanimul.notes.common.domain.model.NoteModel" />
        <variable
            name="viewModel"
            type="org.tanimul.notes.ui.fragments.notes.presentation.NotesViewModel" />

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorBackground"
        app:cardCornerRadius="8dp"
        app:cardElevation="3dp">

        <View
            android:id="@+id/view_importance"
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:id="@+id/tv_noteTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@{note.noteTitle}"
                android:textColor="@color/colorTextDark"
                android:textSize="20sp"
                tools:text="@string/note_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_noteDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLength="180"
                android:text="@{note.noteDetails}"
                android:textColor="@color/colorTextLight"
                android:textSize="14sp"
                tools:text="@string/note_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_noteTitle" />

            <TextView
                android:id="@+id/tv_noteDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{note.dateFormatted}"
                android:textSize="12sp"
                tools:text="@string/note_day"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_noteDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>