<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.InputActivity">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/layout_toolbar" />

    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/simple_background_edit_text"
        android:hint="@string/title"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_layout" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/simple_background_edit_text"
        android:hint="@string/start_typing"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_title" />

    <Spinner
        android:id="@+id/spinner_priority"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/spinner_background_edit_text"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center"
        android:padding="5dp"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_save"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ib_dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@null"
        android:focusable="true"
        android:padding="10dp"
        android:src="@drawable/ic_dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_save" />

    <Button
        android:id="@+id/bt_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button_background"
        android:text="@string/save"
        android:textSize="14sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>