<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/miscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_miscellaneous"
    android:orientation="vertical"
    app:behavior_peekHeight="50dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/text_miscellaneous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/more_options"
        android:textAllCaps="true"
        android:textColor="@color/colorTextDark"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/layoutNoteColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color1" />

            <ImageView
                android:id="@+id/imageColor1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/white" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color2" />

            <ImageView
                android:id="@+id/imageColor2"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/white" />


        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/background_note_color3" />

            <ImageView
                android:id="@+id/imageColor3"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/white" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_delete_forever_24"
            app:tint="@color/high_card_background" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:includeFontPadding="false"
            android:text="@string/delete_note"
            android:textColor="@color/colorTextDark"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>